# market-maker-rs

./: Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: semver.yml
examples/: alert_system.rs  circuit_breaker.rs  drawdown_tracker.rs  glft_model.rs  risk_limits.rs
src/: lib.rs  prelude.rs
src/execution/: connector.rs  latency.rs  mock.rs  mod.rs
src/market_state/: mod.rs  snapshot.rs  volatility.rs
src/position/: inventory.rs  mod.rs  pnl.rs
src/risk/: circuit_breaker.rs
src/strategy/: adaptive_spread.rs  avellaneda_stoikov.rs  config.rs  depth_based.rs  mod.rs  quote.rs
src/types/: error.rs  mod.rs  primitives.rs
