[package]
name = "market-maker-rs"
version = "0.1.3"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A Rust library implementing quantitative market making strategies, starting with the Avellaneda-Stoikov model"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/market-maker-rs"
homepage = "https://github.com/joaquinbejar/market-maker-rs"
keywords = ["finance", "market-making", "trading", "quantitative", "avellaneda-stoikov"]
categories = ["finance", "mathematics", "algorithms"]
include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "doc/**/*.md",
]

[lib]
name = "market_maker_rs"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
pretty-simple-display = { version = "0.1.0", optional = true }
async-trait = "0.1"
orderbook-rs = "0.4"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt", "time", "rt-multi-thread"] }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "dep:pretty-simple-display", "rust_decimal/serde"]
